--- a/components/contactForm/ContactForm.module.css
+++ b/components/contactForm/ContactForm.module.css
@@ -1,10 +1,11 @@
 @design-tokens url("../../styles/design-tokens.json") format("style-dictionary3");
 
 .formContainer {
-  /* Full-width */
-  margin: 0 calc(var(--column-margin-right) * -1) 0 calc(var(--column-margin-left) * -1);
-  padding: 48px var(--column-margin-right) 48px var(--column-margin-left);
+  padding: 48px 0;
   background-color: var(--color-white);
+  /* Full-width (https://www.youtube.com/watch?v=81pnuZFarRw) */
+  box-shadow: 0 0 0 100vmax var(--color-white);
+  clip-path: inset(0 -100vmax);
 }
 @media (min-width: token("breakpoints.w600" to rem)) {
   .formContainer {
@@ -12,8 +13,9 @@
     max-width: 37.5rem;
     margin: 0 auto;
     padding: 48px;
-    box-shadow: var(--box-shadow);
     border-radius: 10px 0;
+    box-shadow: var(--box-shadow);
+    clip-path: none;
   }
 }
 .fieldGroup {
