--- a/components/homePage/AuthorBio.module.css
+++ b/components/homePage/AuthorBio.module.css
@@ -51,9 +51,6 @@
   width: 100%;
   max-width: 175px;
 }
-/* .authorBioImage > img {
-  aspect-ratio: 1 / 1;
-} */
 @media (min-width: token("breakpoints.w1150" to rem)) and (max-width: token("breakpoints.w1279" to rem)) {
   .authorBioImage {
     max-width: 140px;
